--- a/test.ipynb
+++ b/test.ipynb
@@ -397,6 +397,17 @@
       "  }\n",
       "};\n"
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -435,6 +446,38 @@
     "    problem_solved()\n",
     "    time.sleep(5)\n",
     "# print(pyautogui.position())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Subscribe to unlock.\\n'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#premium checker\n",
+    "\n",
+    "import pyautogui\n",
+    "import time\n",
+    "import pytesseract\n",
+    "time.sleep(7)\n",
+    "\n",
+    "im = pyautogui.screenshot('./Image/test1.png',region=(1188, 868, 534, 98))\n",
+    "text = pytesseract.image_to_string(\"./Image/test1.png\")\n",
+    "text\n",
+    "\n",
+    "# button7location = pyautogui.locateOnScreen('./Image/sus.png')\n",
+    "# print(button7location)"
    ]
   }
  ],
