added fail safe

--- a/test.ipynb
+++ b/test.ipynb
@@ -450,18 +450,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Subscribe to unlock.\\n'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Box(left=2696, top=862, width=136, height=56)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for //: 'Box' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m imi \u001b[38;5;241m=\u001b[39m pyautogui\u001b[38;5;241m.\u001b[39mscreenshot(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./Image/butt.png\u001b[39m\u001b[38;5;124m'\u001b[39m,region\u001b[38;5;241m=\u001b[39mbutton7location)\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m button7location \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m---> 17\u001b[0m     pyautogui\u001b[38;5;241m.\u001b[39mclick(\u001b[43mbutton7location\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m)\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mImage not found on the screen.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for //: 'Box' and 'int'"
+     ]
     }
    ],
    "source": [
@@ -472,12 +480,19 @@
     "import pytesseract\n",
     "time.sleep(7)\n",
     "\n",
-    "im = pyautogui.screenshot('./Image/test1.png',region=(1188, 868, 534, 98))\n",
-    "text = pytesseract.image_to_string(\"./Image/test1.png\")\n",
-    "text\n",
+    "# im = pyautogui.screenshot('./Image/test1.png',region=(1188, 868, 534, 98))\n",
+    "# text = pytesseract.image_to_string(\"./Image/test1.png\")\n",
+    "# text\n",
     "\n",
-    "# button7location = pyautogui.locateOnScreen('./Image/sus.png')\n",
-    "# print(button7location)"
+    "button7location = pyautogui.locateOnScreen('./Image/submit_better.png')\n",
+    "print(button7location)\n",
+    "imi = pyautogui.screenshot('./Image/butt.png',region=button7location)\n",
+    "\n",
+    "if button7location is not None:\n",
+    "    pyautogui.click('./Image/submit_better.png')\n",
+    "\n",
+    "else:\n",
+    "    print(\"Image not found on the screen.\")"
    ]
   }
  ],
